<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:background="@drawable/layoutstyle">

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >
    
    <LinearLayout
        android:id="@+id/allcatsLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/layoutstyle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="getResults"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/categories_cinza" />
        
          <TextView  
            android:id="@+id/catText1"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/allCats"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient1"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/allcatsLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
    
    <LinearLayout
        android:id="@+id/mobileLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/mobileprog_cinza" />
        
          <TextView  
            android:id="@+id/catText2"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/mobile"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient2"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/mobileLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
    
	 <LinearLayout
        android:id="@+id/webdevLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/webdev_cinza" />
        
          <TextView  
            android:id="@+id/catText3"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/webdev"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient3"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/webdevLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
  
     <LinearLayout
        android:id="@+id/webdesignLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient3"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg8"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/webdesign_cinza" />
        
          <TextView  
            android:id="@+id/catText8"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/design"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient8"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/webdesignLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
    
    <LinearLayout
        android:id="@+id/imageeditLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient8"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/imageediting_cinza" />
        
          <TextView  
            android:id="@+id/catText4"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/image"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient4"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/imageeditLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
    <LinearLayout
        android:id="@+id/soundeditLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient4"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/soundediting_cinza" />
        
          <TextView  
            android:id="@+id/catText5"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/sound"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient5"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/soundeditLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
    
     <LinearLayout
        android:id="@+id/movieeditLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient5"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/movieediting_cinza" />
        
          <TextView  
            android:id="@+id/catText6"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/video"
            />        

    </LinearLayout>
    
    <View
        android:id="@+id/gradient6"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/movieeditLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>
    
    
     <LinearLayout
        android:id="@+id/databaseLayout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/layoutstyle"
        android:layout_below="@+id/gradient6"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <ImageView
            android:id="@+id/catImg7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left|center_vertical"
            android:src="@drawable/database_cinza" />
        
          <TextView  
            android:id="@+id/catText7"
            android:layout_width="0dip" 
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_weight="1"             
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:textSize="18dp"
            android:text="@string/database"
            />        

    </LinearLayout>
    
    <!--<View
        android:id="@+id/gradient7"
        android:layout_width="wrap_content"
        android:background="@drawable/gradient"
        android:layout_below="@id/databaseLayout"                 
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"></View>-->
    
    
</RelativeLayout>


    
</ScrollView>
